tests/ui/consts/const-eval/const_panic.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const_panic.rs:6:15
   |
LL | const Z: () = std::panic!("cheese");
   |               ^^^^^^^^^^^^^^^^^^^^^ evaluation panicked: cheese

error[E0080]: evaluation of constant value failed
  --> $DIR/const_panic.rs:9:16
   |
LL | const Z2: () = std::panic!();
   |                ^^^^^^^^^^^^^ evaluation panicked: explicit panic

error[E0080]: evaluation of constant value failed
  --> $DIR/const_panic.rs:12:15
   |
LL | const Y: () = std::unreachable!();
   |               ^^^^^^^^^^^^^^^^^^^ evaluation panicked: internal error: entered unreachable code

error[E0080]: evaluation of constant value failed
  --> $DIR/const_panic.rs:15:15
   |
LL | const X: () = std::unimplemented!();
   |               ^^^^^^^^^^^^^^^^^^^^^ evaluation panicked: not implemented
   |
   = note: this error originates in the macro `std::unimplemented` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation of constant value failed
  --> $DIR/const_panic.rs:18:15
   |
LL | const W: () = std::panic!(MSG);
   |               ^^^^^^^^^^^^^^^^ evaluation panicked: hello

error[E0080]: evaluation of constant value failed
  --> $DIR/const_panic.rs:21:16
   |
LL | const W2: () = std::panic!("{}", MSG);
   |                ^^^^^^^^^^^^^^^^^^^^^^ evaluation panicked: hello

error[E0080]: evaluation of constant value failed
  --> $DIR/const_panic.rs:24:20
   |
LL | const Z_CORE: () = core::panic!("cheese");
   |                    ^^^^^^^^^^^^^^^^^^^^^^ evaluation panicked: cheese

error[E0080]: evaluation of constant value failed
  --> $DIR/const_panic.rs:27:21
   |
LL | const Z2_CORE: () = core::panic!();
   |                     ^^^^^^^^^^^^^^ evaluation panicked: explicit panic

error[E0080]: evaluation of constant value failed
  --> $DIR/const_panic.rs:30:20
   |
LL | const Y_CORE: () = core::unreachable!();
   |                    ^^^^^^^^^^^^^^^^^^^^ evaluation panicked: internal error: entered unreachable code

error[E0080]: evaluation of constant value failed
  --> $DIR/const_panic.rs:33:20
   |
LL | const X_CORE: () = core::unimplemented!();
   |                    ^^^^^^^^^^^^^^^^^^^^^^ evaluation panicked: not implemented
   |
   = note: this error originates in the macro `core::unimplemented` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation of constant value failed
  --> $DIR/const_panic.rs:36:20
   |
LL | const W_CORE: () = core::panic!(MSG);
   |                    ^^^^^^^^^^^^^^^^^ evaluation panicked: hello

error[E0080]: evaluation of constant value failed
  --> $DIR/const_panic.rs:39:21
   |
LL | const W2_CORE: () = core::panic!("{}", MSG);
   |                     ^^^^^^^^^^^^^^^^^^^^^^^ evaluation panicked: hello

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0080`.
